Fixed z-index on menu with booking form

--- a/src/App.css
+++ b/src/App.css
@@ -238,6 +238,7 @@ a:visited {
         right: 0;
         width: 100%;
         height: fit-content;
+        z-index: 100;
     }
 
     .bb-nav-link {
